--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,13 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install pytest-asyncio
+        pip install flake8 pytest mypy pytest-asyncio
         pip install -e .
     - name: Lint with flake8
       run: |
         flake8 ./src --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 ./src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 ./src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --ignore F401,F403,E501,F541
+    - name: Validate types with mypy
+      run: |
+        mypy ./src --no-strict-optional
     - name: Test with pytest
       run: |
         pytest ./tests
