--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ testing =
     pytest >= 6.2.4
     pytest-asyncio >= 0.15.1
     flake8 >= 5.0.4
+    mypy >= 0.975
 docs =
     sphinx >= 4.1.2
     sphinx-rtd-theme >= 1.0.0
