--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = aiowowapi
 author = Adalyia
-version = 2.1.2
+version = 2.1.4
 description = An asynchronous Python wrapper for the World of Warcraft APIs.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Games/Entertainment
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
@@ -29,7 +30,7 @@ packages =
     aiowowapi.retail
     aiowowapi.classic
 install_requires =
-    aiohttp >= 3.7.4.post0
+    aiohttp >= 3.8.0
 python_requires = >=3.8
 package_dir =
     = src
